...
    val answerData = remember { mutableStateListOf<Vocab1ItemAnswer>() }
    val questionData = remember { mutableStateListOf<Vocab1ItemQuestion>() }
    val commentsData = remember { mutableStateListOf<String>() }
    val dataStatus = remember { mutableStateOf(false) }
    LaunchedEffect(Unit) {
        courseListRef.get().addOnSuccessListener { dataSnapshot ->
            val questionPath = dataSnapshot.child(language).child(course).child(lesson).child("Vocabulary").child("Type2").child(question)
            val questionText = questionPath.child("Question").child("Text").getValue(String::class.java) ?: ""
            val questionSound = questionPath.child("Question").child("Sound").getValue(String::class.java) ?: ""
            questionData.add(Vocab1ItemQuestion("Question", questionText, questionSound))
            val commentsSnapshot = questionPath.child("Comments")
            commentsSnapshot.children.forEach { commentSnapshot ->
                commentNumberVocab1++
...
        var cardType3 by remember { mutableStateOf(CardType.WHITE) }
        var cardType4 by remember { mutableStateOf(CardType.WHITE) }
        var selectedCard by remember { mutableIntStateOf(0) }
        var answerResultStatus by remember { mutableStateOf(false) }
        var continueStatus by remember { mutableStateOf(false) }

        Column(modifier = modifier.fillMaxSize().background(Color(0xFF073748)).testTag("Vocab1Screen")
            .padding(start = 20.dp, end = 20.dp).verticalScroll(rememberScrollState())) {
            Spacer(modifier = Modifier.height(70.dp))
            Row(
                verticalAlignment = Alignment.CenterVertically // Align items in the center vertically
            ) {
                CloseButton(onClick = { ExitLesson() })
...
                    Spacer(modifier = Modifier.width(20.dp))
                    Column ( modifier = modifier
                        .fillMaxWidth()
                        .background(color = Color(0xFFFFFFFF), shape = RoundedCornerShape(size = 20.dp)).padding(10.dp),
                        horizontalAlignment = Alignment.CenterHorizontally){
                        Text(
                            modifier = modifier.testTag("QuestionText"),
                            text = questionText,
                            fontFamily = SeravekFontFamily,
                            fontWeight = FontWeight.Medium,
                            textAlign = TextAlign.Center)
                    }
                }
...
                Row(modifier = modifier.fillMaxWidth(),
                    verticalAlignment = Alignment.CenterVertically,
                    horizontalArrangement = Arrangement.Center){
                    val imageUri1 = imageUriList[0][0]?.uri
                    val title1 = imageUriList[0][0]?.name ?: "Loading..."
                    Card(
                        modifier = Modifier.testTag("Content1"),
                        title = title1,
                        description = null,
                        cardType = cardType1,
                        cardShape = CardShape.CHOICES_SQUARE,
                        progress = null,
                        complete = null,
...
                        imageUri = imageUri1
                    )
                    Spacer(modifier = Modifier.width(20.dp))
                    val imageUri2 = imageUriList[1][0]?.uri
                    val title2 = imageUriList[1][0]?.name ?: "Loading..."
                    Card(
                        modifier = Modifier.testTag("Content2"),
                        title = title2,
                        description = null,
                        cardType = cardType2,
                        cardShape = CardShape.CHOICES_SQUARE,
                        progress = null,
                        complete = null,
...
                Row(modifier = modifier.fillMaxWidth(),
                    verticalAlignment = Alignment.CenterVertically,
                    horizontalArrangement = Arrangement.Center){
                    val imageUri3 = imageUriList[2][0]?.uri
                    val title3 = imageUriList[2][0]?.name ?: "Loading..."
                    Card(
                        modifier = Modifier.testTag("Content3"),
                        title = title3,
                        description = null,
                        cardType = cardType3,
                        cardShape = CardShape.CHOICES_SQUARE,
                        progress = null,
                        complete = null,
...
                        imageUri = imageUri3
                    )
                    Spacer(modifier = Modifier.width(20.dp))
                    val imageUri4 = imageUriList[3][0]?.uri
                    val title4 = imageUriList[3][0]?.name ?: "Loading..."
                    Card(
                        modifier = Modifier.testTag("Content4"),
                        title = title4,
                        description = null,
                        cardType = cardType4,
                        cardShape = CardShape.CHOICES_SQUARE,
                        progress = null,
                        complete = null,
...
