...
@OptIn(ExperimentalMaterial3Api::class)
@Composable
fun Discussion(modifier: Modifier = Modifier, comments: List<String>): List<String> {
    var isExpanded by remember { mutableStateOf(false) }
    var comment by remember { mutableStateOf("") }
    var commentsList by remember { mutableStateOf(comments) }
    Column(modifier = Modifier.fillMaxWidth().testTag("Discussion")) {
        // Header Section
        Box(
            Modifier
                .fillMaxWidth()
                .height(60.dp)
                .background(Color(0xFF073748))
...
                        )
                    }
                    IconButton(
                        onClick = {
                            isExpanded = !isExpanded
                        },
                        modifier = modifier.offset(20.dp).testTag("DropDownButton")
                    ) {
                        Icon(
                            imageVector = if (isExpanded) Icons.Rounded.KeyboardArrowUp else Icons.Rounded.KeyboardArrowDown,
                            contentDescription = if (isExpanded) "Collapse" else "Expand",
                            tint = Color.White
                        )
...
                TextField(
                    value = comment,
                    onValueChange = { comment = it },
                    modifier = Modifier
                        .fillMaxWidth()
                        .height(60.dp)
                        .testTag("CommentField"),
                    placeholder = {
                        Text(
                            text = "Type a comment...",
                            color = Color(0xFF0B4D65)
                        )
                    },
...
                    },
                    shape = RoundedCornerShape(10.dp),
                    modifier = Modifier
                        .width(70.dp)
                        .height(50.dp)
                        .padding(top = 10.dp, end = 10.dp)
                        .testTag("SendButton"),
                    colors = ButtonDefaults.buttonColors(containerColor = Color(0xFF00CCFF))
                ) {
                    Image(
                        modifier = Modifier.fillMaxSize(),
                        painter = painterResource(id = R.drawable.sendicon),
                        contentDescription = null
...
