...
                UsernameScreen {
                    navController.navigate(Routes.DailyGoal)
                }
            }

            composable(Routes.DailyGoal) {
                SetDailyGoalScreen(
                    NavigateToNotification = { navController.navigate(Routes.Notify) },
                    NavigateToUserName = { navController.navigate(Routes.UserName) }

                )
            }

            composable(Routes.Notify) { //add more when new buttom to go back
                EnableNotifyScreen(
                    NavigateToCourse = { navController.navigate(Routes.Course) },
                    NavigateToGoal = { navController.navigate(Routes.DailyGoal) }
                )
            }

            composable(Routes.Course) {
                CourseManageScreen(
                    NavigateToComplete = { navController.navigate(Routes.Complete) },
                    NavigateToNotification = { navController.navigate(Routes.Notify) }
                )
            }

            composable(Routes.Complete) {
...
            LoadingScreen3 {
                navController.navigate(Routes.Home)
            }
        }

        composable(Routes.Home) {
            HomeScreen(
                NavigateToLeader = {navController.navigate("${Routes.LeaderBoard}/home")},
                NavigateToAddLanguage = {navController.navigate("${Routes.AddDailyGoal}/language")}, //go the same screen but it depends on the button you have clicked
                NavigateToAddCourse = {navController.navigate("${Routes.AddDailyGoal}/course")}, //here i define the value of "type"
                NavigateToLoadingScreen2 = {navController.navigate(Routes.Loading2)},
                NavigateToProfile = {navController.navigate(Routes.ProfileScreen)},
                NavigateToLessons = {navController.navigate(Routes.SelectExercise)},
...
